package ru.xast.SkillSwap.util;

public enum Status {
    SUCCESS,
    IN_PROCESS,
    CANCELED
}
