@startuml

class PersInf {
    -id: UUID
    -surname: String
    -name: String
    -birthYear: int
    -phoneNumber: String
    -email: String
}

class ProfInf {
    -id: UUID
    -pers_Id: PersInf
    -skillName: String
    -skillDescription: String
    -cost: Double
    -persDescription: String
    -exp: Double
    -rating: Double
}

class SkillExchange {
    -exchangeId: UUID
    -skillOffered: String
    -userOffering: UUID
    -userRequesting: UUID
}

class Review {
    -reviewId: UUID
    -rating: double
    -comment: String
    -reviewer: UUID
    -userEvaluated: UUID
}

class Transaction {
    -transactionId: UUID
    -date: Date
    -status: Status
    -changeId: SkillExchange
}

enum Status {
    SUCCESS
    IN_PROCESS
    CANCELED
}

PersInf <-- ProfInf
SkillExchange --> PersInf
Review --> PersInf
Transaction --> PersInf
Transaction --> Status

@enduml